--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<h1>Hello Everyone</h1>
-	<h3>You are seeing the HTML content of my static Website</h3>
+	<h3>This is my first static Website</h3>
 	<h5>Thank You</h5>
 </body>
 </html>
