--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>Static Website</title>
+  <title>Our Company</title>
 </head>
+
 <body>
-	<h1>Hello Everyone</h1>
-	<h3>This is my first static Website</h3>
-	<h5>Thank You</h5>
+
+  <h1>Welcome to Our Company</h1>
+  <h2>Web Site Main Ingredients:</h2>
+
+  <p>Pages (HTML)</p>
+  <p>Style Sheets (CSS)</p>
+  <p>Computer Code (JavaScript)</p>
+  <p>Live Data (Files and Databases)</p>
+
 </body>
 </html>
