--- a/index.html
+++ b/index.html
@@ -2,18 +2,12 @@
 <html>
 
 <head>
-  <title>Our Company</title>
+  <title>Static Website</title>
 </head>
 
 <body>
 
   <h1>Welcome to Our Company</h1>
-  <h2>Web Site Main Ingredients:</h2>
-
-  <p>Pages (HTML)</p>
-  <p>Style Sheets (CSS)</p>
-  <p>Computer Code (JavaScript)</p>
-  <p>Live Data (Files and Databases)</p>
-
+  <h2>This is the official website of our company</h2>
 </body>
 </html>
